FISH-6259 debug illegal access